css/main.css
/* ... */
#header {
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    transition: all 0.5s;
    z-index: 997
}

#header.header-scrolled {
    transition: all 0.5s;
    background-color: #fffffff5;
}

#header.header-scrolled .main-menu {
    border-color: transparent
}

@media (max-width: 990px) {
    #logo {
        /* margin-left: 20px; */
        text-align: center;
        width: 60%;
    }
}

#header #logo h1 {
    font-size: 34px;
    margin: 0;
    padding: 0;
    line-height: 1;
    font-weight: 700;
    letter-spacing: 3px
}

#header #logo h1 a,
#header #logo h1 a:hover {
    color: #000;
    padding-left: 10px;
    border-left: 4px solid #f7631b
}

#header #logo img {
    padding: 0;
    margin: 0
}

@media (max-width: 768px) {
    #header #logo h1 {
        font-size: 28px
    }
    #header #logo img {
        max-height: 40px
    }
}

.nav-menu,
.nav-menu * {
    margin: 0;
    padding: 0;
    list-style: none
}

.nav-menu ul {
    position: absolute;
    display: none;
    top: 100%;
    right: 0;
    z-index: 99
}

.nav-menu li {
    position: relative;
    white-space: nowrap
}

.nav-menu>li {
    float: left
}

.nav-menu li:hover>ul,
.nav-menu li.sfHover>ul {
    display: block
}

.nav-menu ul ul {
    top: 0;
    right: 100%
}

.nav-menu ul li {
    min-width: 180px
}

.sf-arrows .sf-with-ul {
    padding-right: 30px
}

.sf-arrows .sf-with-ul:after {
    content: "\f107";
    position: absolute;
    right: 15px;
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal
}

.sf-arrows ul .sf-with-ul:after {
    content: "\f105"
}

@media (max-width: 768px) {
    #nav-menu-container {
        display: none
    }
}

.nav-menu a {
    padding: 0 8px 0px 8px;
    text-decoration: none;
    display: inline-block;
    color: #192f74;
    font-size: 14px;
    text-transform: uppercase;
    outline: none;
    font-weight: bold;
}

.nav-menu li:hover>a {
    color: #00a207;
}

.nav-menu>li {
    margin-left: 10px
}

.nav-menu ul {
    margin: 24px 0 0 0;
    padding: 10px;
    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
    background: #fff
}

.nav-menu ul li {
    transition: 0.3s
}

.nav-menu ul li a {
    padding: 5px 10px;
    color: #333;
    transition: 0.3s;
    display: block;
    font-size: 12px;
    text-transform: none
}

.nav-menu ul li:hover>a {
    color: #f7631b
}

.nav-menu ul ul {
    margin-right: 10px;
    margin-top: 0
}

#mobile-nav-toggle {
    position: fixed;
    right: 15px;
    z-index: 999;
    top: 62px;
    border: 0;
    background: none;
    font-size: 24px;
    display: none;
    transition: all 0.4s;
    outline: none;
    cursor: pointer
}

#mobile-nav-toggle i {
    color: #0c236b;
    font-weight: 900;
}

@media (max-width: 960px) {
    #mobile-nav-toggle {
        display: inline
    }
    #nav-menu-container {
        display: none
    }
}

#mobile-nav {
    position: fixed;
    top: 0;
    padding-top: 18px;
    bottom: 0;
    z-index: 998;
    background: rgba(0, 0, 0, 0.8);
    left: -260px;
    width: 260px;
    overflow-y: auto;
    transition: 0.4s
}

#mobile-nav ul {
    padding: 0;
    margin: 0;
    list-style: none
}

#mobile-nav ul li {
    position: relative
}

#mobile-nav ul li a {
    color: #fff;
    font-size: 13px;
    text-transform: uppercase;
    overflow: hidden;
    padding: 10px 22px 10px 15px;
    position: relative;
    text-decoration: none;
    width: 100%;
    display: block;
    outline: none;
    font-weight: 400
}

#mobile-nav ul li a:hover {
    color: #fff
}

#mobile-nav ul li li {
    padding-left: 30px
}

#mobile-nav ul .menu-has-children i {
    position: absolute;
    right: 0;
    z-index: 99;
    padding: 15px;
    cursor: pointer;
    color: #fff
}

#mobile-nav ul .menu-has-children i.fa-chevron-up {
    color: #f7631b
}

#mobile-nav ul .menu-has-children li a {
    text-transform: none
}

#mobile-nav ul .menu-item-active {
    color: #f7631b
}

#mobile-body-overly {
    width: 100%;
    height: 100%;
    z-index: 997;
    top: 0;
    left: 0;
    position: fixed;
    background: rgba(0, 0, 0, 0.7);
    display: none
}

body.mobile-nav-active {
    overflow: hidden
}

body.mobile-nav-active #mobile-nav {
    left: 0
}

body.mobile-nav-active #mobile-nav-toggle {
    color: #fff
}

.section-gap {
    padding: 40px 0;
}

.alert-msg {
    color: #008000
}

.primary-btn {
    background: #22c522;
    line-height: 42px;
    padding-left: 30px;
    padding-right: 30px;
    border: none;
    color: #fff;
    display: inline-block;
    font-weight: 500;
    position: relative;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
    cursor: pointer;
    position: relative;
}

.primary-btn:focus {
    outline: none
}

.primary-btn span {
    color: #fff;
    position: absolute;
    top: 50%;
    transform: translateY(-60%);
    right: 30px;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s
}

.primary-btn:hover {
    color: #fff
}

.primary-btn:hover span {
    color: #fff;
    right: 20px
}

.primary-btn.white {
    border: 1px solid #fff;
    color: #fff
}

.primary-btn.white span {
    color: #fff
}

.primary-btn.white:hover {
    background: #fff;
    color: #f7631b
}

.primary-btn.white:hover span {
    color: #f7631b
}

.primary-btn.wh {
    background: #fff;
    color: #222;
    text-transform: uppercase
}

.primary-btn.wh:hover {
    background: #222;
    color: #fff
}

.primary-btn.squire {
    border-radius: 0px !important;
    border: 1px solid transparent
}

.primary-btn.squire:hover {
    border: 1px solid #fff;
    background: transparent;
    color: #fff
}

.overlay {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0
}
/* ... */

